Fri Sep 19 08:15:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c: revert, wrong type constant

Fri Sep 19 08:10:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/encodings.h src/tds/encodings.pl:
	- remove empty charset

Thu Sep 18 16:17:57 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/iconv.c
	- small edits, added tds_iconv_info_close utility function
	* src/tds/encodings.h src/tds/encodings.pl
	- cannot look up charset "646" properly 
	- attempted to fix off-by-one in src/tds/encodings.h
	- but ran out of time.  

Thu Sep 18 11:26:59 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/vasprintf.c
	- Fix off-by-one error in vsnprintf-based vasprintf() replacement.

Wed Sep 17 21:29:21 PDT 2003	Peter Deacon <peterd@iea-software.com>
	* src/tds/mem.c: added sqlstate mappings
	* src/replacements/iconv.c: fix charset selection

Wed Sep 17 09:22:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fix memory leak
	- return SQL_SUCCESS_WITH_INFO on 01S02 (Option value changed)
	* src/odbc/unittests/type.c: improve
	* include/tdsiconv.h:
	* include/tds.h src/tds/encodings.h src/tds/encodings.pl:
	* src/tds/iconv.c src/tds/login.c src/tds/mem.c:
	* src/tds/query.c src/tds/token.c:
	- use UTF8 as one of required charset (to fix some problems)
	- fix many issues in query.c related to iconv stuff
	- more compatibility for strange iconv implementation (big endian)
	- use memcpy for same charset conversions
	- use nearest conversion for Sybase

Thu Sep 11 16:50:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c src/odbc/odbc_checks.c:
	* win32/msvc6/FreeTDS.dsp:
	- applied Peter Deacon patch

Tue Sep  9 14:00:57 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/contrib.html doc/htdoc/faq.html
	- removed references to 'book1.html'

Thu Sep 04 10:56:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>